fix: stats heading visibility when no data, transaction list style error

--- a/src/components/layout/Statistics/Statistics.module.css
+++ b/src/components/layout/Statistics/Statistics.module.css
@@ -7,9 +7,19 @@
   display: flex;
   gap: 16px;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   border-radius: 16px;
+  position: relative;
+
+  & .noData {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    background: var(--hover-color);
+  }
 }
 .toggle {
   color: white;
@@ -21,6 +31,7 @@
   gap: 20px;
   margin-bottom: 20px;
 }
+
 @media screen and (min-width: 768px) {
   .container {
     /* max-width: 698px; */
@@ -46,5 +57,11 @@
     padding: 16px 26px 0 32px;
     flex-direction: row;
     /* margin: 55px 0; */
+
+    & .noData {
+      background: transparent;
+      min-height: auto;
+      top: 45%;
+    }
   }
 }
