--- a/src/components/transactions/TransactionsList/TransactionsList.module.css
+++ b/src/components/transactions/TransactionsList/TransactionsList.module.css
@@ -127,6 +127,6 @@
   .list {
     padding-right: 18px;
     min-height: unset;
-    max-height: 500px;
+    max-height: 485px;
   }
 }
